[tool.poetry]
name = "weak-lru-cache"
version = "0.1.0"
description = ""
authors = ["shotat <shotat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.13.0"
ruff = "^0.7.1"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
